--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
+    "mongoose-unique-validator": "^5.0.0",
     "nodemon": "^3.1.3"
   }
 }
